test/mutation_analysis/s0925_long_pressed_name/hafis/o3/mutants/21/result.txt
./test/mutation_analysis/s0925_long_pressed_name/hafis/o3/mutants/21/Solution.java:25: error: unreachable statement
            while (false) {
                          ^
1 error
